# julia-client

./: .gitignore  .goreleaser.yml  CLAUDE.md  README.md  go.mod  install.sh  justfile
.claude/skills/: julia-client
.github/workflows/: release.yml  test.yml
go/: client_test.go  daemon.go  julia_client_runtime.jl  main.go  proc_unix.go  proc_windows.go  session.go
go/testdata/: compute.jl
go/testdata/TestRevPkg/: Project.toml
python/: pyproject.toml
python/julia_client/: cli.py  daemon.py  session.py
skills/julia-client/: SKILL.md
