[project]
name = "julia-client"
version = "0.1.0"
description = "Persistent Julia REPL client and daemon"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
julia-client = "julia_client.cli:main"
julia-daemon = "julia_client.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23"]
